kubernetes/clusters/home/4-apps/utils/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: utils
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v2.5.0 # {"$imagepolicy": "flux-system:homepage"}
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: homepage-bookmarks
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
            - name: homepage-services
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: logs
              mountPath: /app/logs
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homepage-config-pvc
        - name: homepage-bookmarks
          configMap:
            name: homepage-bookmarks
        - name: homepage-services
          configMap:
            name: homepage-services
        - name: logs
          emptyDir: {}
