kubernetes/clusters/home/4-apps/utils/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: utils

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

spec:
  ingressClassName: nginx

  tls:
  - hosts:
      - homepage.alarlab.dev
    secretName: wildcard-alarlab-tls

  rules:
    - host: homepage.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-service
                port:
                  number: 80
